# RudraOne_1

./: .gitignore  README.md  config.py  online_text_speech.py  prompts.py  pyproject.toml  sarvam_tts.py  server.py  training.py  voice_phone_call.py
extra/: audio_forwarder.py  client.py  client_sock.py  client_transcription.py  fetch_recordings_example.py  live_transcription_server.py  offline.py  online.py  select_audio_device.py  socket_client.py  start_client.bat  start_server.bat  test_live_client.py  test_microphone.py  voice_phone_call_groq.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BlackGoldDemo.tsx  DesktopSettings.tsx  FAQ.tsx  Features.tsx  Footer.tsx  GlassCard.tsx  Hero.tsx  HowItWorks.tsx  HowItWorksInline.tsx  IntelligenceResponseAnimation.tsx  MapView.tsx  Mission.tsx  Navigation.tsx  PlatformTabs.tsx  Pricing.tsx  ResponseWordAnimation.tsx  RudraOneLogo.tsx  Testimonials.tsx  TypingAnimation.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useRealtimeTranslation.ts  useWebSocket.ts
frontend/src/pages/: About.tsx  Blog.tsx  Contact.tsx  Dashboard.tsx  Index.tsx  Login.tsx  NotFound.tsx
frontend/src/services/: apiService.ts  audioService.ts  insightsService.ts  protocolService.ts  realtimeTranslationService.ts  translationService.ts  translationTest.ts
frontend/src/utils/: audioDebug.ts
